<resources>
    <string name="app_name">Family Map</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port:</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male:</string>
    <string name="female">Female:</string>
    <string name="register">Register</string>
    <string name="singIn">Sign in</string>
    <string name="familyTitle">Family</string>
    <string name="lifeEventsTitle">Life Events</string>
</resources>
